--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@ionic/vue-router": "^7.0.0",
     "ionicons": "^7.0.0",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuetify": "^3.3.17"
   },
   "devDependencies": {
     "@capacitor/cli": "5.4.0",
